@@ -5,5 +5,5 @@ Bernd Petrovitsch <bernd@ict.tuwien.ac.at>
 Nelson H. F. Beebe <beebe@math.utah.edu>: references and testing the
 software on many different platforms.
 
-Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>: IEEE support for Tru64
-and testing
+Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>: IEEE support for Tru64,
+AIX, IRIX, fixes for odes, and testing
