@@ -3,6 +3,7 @@
  */
 #include <config.h>
 #include <stdlib.h>
+#include <string.h>
 #include <gsl_errno.h>
 #include "odeiv_util.h"
 #include "gsl_odeiv.h"
