@@ -1,11 +1,20 @@
+Sat Aug 21 01:05:01 1999  Tim Mooney <mooney@plains.NoDak.edu>
+ 
+    * fp-aix.c: added, based on fp-solaris.
+ 
 Fri Aug 20 12:17:53 1999  Brian Gough  <bjg@network-theory.co.uk>
 
 	* fp-tru64.c (gsl_ieee_set_mode): note that INEXACT is not easily
  	supported on Tru64, and give an error if anyone tries to use it
 
+Wed Aug 18 21:36:01 1999  Tim Mooney <mooney@plains.NoDak.edu>
+ 
+    * fp-irix.c: added, based on fp-solaris.  IRIX 6 has a rounding and
+    exception interface that is identical to Solaris, right down to the enums.
+
 Tue Aug 17 18:36:01 1999  Tim Mooney <mooney@plains.NoDak.edu>
  
-       	* fp-tru64.c: added, based on solaris and HP-UX fp-* files.
+    * fp-tru64.c: added, based on solaris and HP-UX fp-* files.
   	Rounding mode and trap control requires that the compiler be
  	passed special options, see the comments in fp-tru64.c.
  
